cleaned up files